--- a/index.html
+++ b/index.html
@@ -4,23 +4,64 @@
   <title>Ahmed Mashhour | Cybersecurity Engineer</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Fira+Code&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <style>
-    .typing-svg { text-align: center; margin-top: 20px; }
-    .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 20px; }
+    body {
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      font-family: 'Poppins', sans-serif;
+      color: #ffffff;
+    }
+    h1, h2, h3, h4 {
+      font-family: 'Fira Code', monospace;
+    }
+    .typing-svg { text-align: center; margin: 30px 0; }
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
     .skills-grid h3 { margin-bottom: 10px; }
     .skills-grid ul { list-style: none; padding-left: 0; }
     .skills-grid li { margin-bottom: 8px; }
+    .button.primary {
+      background-color: #4AB197;
+      color: white;
+      padding: 10px 25px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    #scrollTopBtn {
+      display: none;
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      z-index: 99;
+      background-color: #4AB197;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 50%;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    #scrollTopBtn:hover {
+      background-color: #357f65;
+    }
   </style>
 </head>
 <body class="is-preload">
 
 <!-- Header -->
-<header id="header">
+<header id="header" class="animate__animated animate__fadeInDown">
   <div class="logo">
-    <span class="fas fa-user-shield fa-4x" style="color: #0037ff;"></span>
+    <span class="fas fa-user-shield fa-4x" style="color: #4AB197;"></span>
   </div>
   <div class="content">
     <div class="inner">
@@ -40,12 +81,12 @@
 </header>
 
 <!-- Typing Intro -->
-<div class="typing-svg">
+<div class="typing-svg animate__animated animate__fadeIn">
   <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=600&height=70&duration=4000&lines=Hi+There!+👋;+I'm+Ahmed+Mashhour;+CyberSecurity+Engineer" alt="Typing SVG">
 </div>
 
 <!-- About -->
-<section id="about">
+<section id="about" class="animate__animated animate__fadeInUp">
   <h2 class="major">Professional Summary</h2>
   <p>Dynamic and highly skilled Cybersecurity Engineer with a strong foundation in security operations, threat detection, and incident response. Experienced in managing large-scale SIEM environments, conducting network forensics, and automating security workflows.</p>
   <p>Certified across multiple global programs, combining technical expertise with leadership to drive proactive cyber defense strategies.</p>
@@ -53,7 +94,7 @@
 </section>
 
 <!-- Skills -->
-<section id="skills">
+<section id="skills" class="animate__animated animate__fadeInUp">
   <h2 class="major">Skills & Tools</h2>
   <div class="skills-grid">
     <div>
@@ -108,7 +149,7 @@
 </section>
 
 <!-- Certifications -->
-<section id="certifications">
+<section id="certifications" class="animate__animated animate__fadeInUp">
   <h2 class="major">Certifications</h2>
   <ul>
     <li>Google Cybersecurity Specialization</li>
@@ -120,15 +161,15 @@
   </ul>
 </section>
 
-<!-- Projects Placeholder -->
-<section id="projects">
+<!-- Projects -->
+<section id="projects" class="animate__animated animate__fadeInUp">
   <h2 class="major">Featured Projects</h2>
   <p>Explore practical cybersecurity labs, automation tools, and real-world analysis projects on my GitHub profile.</p>
   <p><a href="https://github.com/ahmmashhour?tab=repositories" class="button primary">View Repositories</a></p>
 </section>
 
 <!-- Contact -->
-<section id="contact">
+<section id="contact" class="animate__animated animate__fadeInUp">
   <h2 class="major">Contact</h2>
   <ul class="icons">
     <li><a href="mailto:ahm.mashhour@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -138,12 +179,29 @@
   </ul>
 </section>
 
+<!-- Scroll to Top Button -->
+<button onclick="topFunction()" id="scrollTopBtn" title="Go to top">↑</button>
+
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
+<script>
+  // Show scroll to top button
+  window.onscroll = function() {
+    let btn = document.getElementById("scrollTopBtn");
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      btn.style.display = "block";
+    } else {
+      btn.style.display = "none";
+    }
+  };
+  function topFunction() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
+</script>
 
 </body>
 </html>
