--- a/index.html
+++ b/index.html
@@ -1,207 +1,115 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
   <title>Ahmed Mashhour | Cybersecurity Engineer</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Fira+Code&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   <style>
     body {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
       font-family: 'Poppins', sans-serif;
       color: #ffffff;
+      margin: 0;
+      padding: 0;
+    }
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
     }
     h1, h2, h3, h4 {
       font-family: 'Fira Code', monospace;
     }
-    .typing-svg { text-align: center; margin: 30px 0; }
-    .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
     }
-    .skills-grid h3 { margin-bottom: 10px; }
-    .skills-grid ul { list-style: none; padding-left: 0; }
-    .skills-grid li { margin-bottom: 8px; }
-    .button.primary {
-      background-color: #4AB197;
-      color: white;
-      padding: 10px 25px;
-      border-radius: 8px;
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    a {
+      color: #4AB197;
       text-decoration: none;
-      font-weight: bold;
-    }
-    #scrollTopBtn {
-      display: none;
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      z-index: 99;
-      background-color: #4AB197;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 50%;
-      font-size: 18px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    #scrollTopBtn:hover {
-      background-color: #357f65;
     }
   </style>
 </head>
+
 <body class="is-preload">
 
 <!-- Header -->
 <header id="header" class="animate__animated animate__fadeInDown">
-  <div class="logo">
-    <span class="fas fa-user-shield fa-4x" style="color: #4AB197;"></span>
+  <div style="text-align:center; padding:30px;">
+    <h1>Ahmed Mashhour</h1>
+    <p>Cybersecurity Engineer | Threat Analyst | SIEM Specialist</p>
   </div>
-  <div class="content">
-    <div class="inner">
-      <h1>Ahmed Mashhour</h1>
-      <p>Cybersecurity Engineer | Threat Analyst | SIEM Specialist</p>
-    </div>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#certifications">Certifications</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
 </header>
 
 <!-- Typing Intro -->
-<div class="typing-svg animate__animated animate__fadeIn">
-  <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=600&height=70&duration=4000&lines=Hi+There!+👋;+I'm+Ahmed+Mashhour;+CyberSecurity+Engineer" alt="Typing SVG">
+<div style="text-align: center; margin: 30px;">
+  <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=30&center=true&vCenter=true&width=500&height=70&duration=4000&lines=Hi+There!+👋;+I'm+Ahmed+Mashhour;+CyberSecurity+Engineer" alt="Typing SVG">
 </div>
 
 <!-- About -->
 <section id="about" class="animate__animated animate__fadeInUp">
   <h2 class="major">Professional Summary</h2>
   <p>Dynamic and highly skilled Cybersecurity Engineer with a strong foundation in security operations, threat detection, and incident response. Experienced in managing large-scale SIEM environments, conducting network forensics, and automating security workflows.</p>
-  <p>Certified across multiple global programs, combining technical expertise with leadership to drive proactive cyber defense strategies.</p>
-  <p>Proficient at aligning security operations with business objectives to ensure resilience and value delivery.</p>
+  <p>Certified across multiple global programs, combining technical expertise with leadership to drive proactive cyber defense strategies. Proficient at aligning security operations with business objectives to ensure resilience and value delivery.</p>
 </section>
 
 <!-- Skills -->
 <section id="skills" class="animate__animated animate__fadeInUp">
   <h2 class="major">Skills & Tools</h2>
-  <div class="skills-grid">
-    <div>
-      <h3>Security Monitoring</h3>
-      <ul>
-        <li>Splunk Enterprise</li>
-        <li>Google Chronicle</li>
-        <li>Wireshark</li>
-        <li>tcpdump</li>
-        <li>Nmap</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Malware & Threat Intel</h3>
-      <ul>
-        <li>VirusTotal</li>
-        <li>Cuckoo Sandbox</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Operating Systems</h3>
-      <ul>
-        <li>Kali Linux</li>
-        <li>Ubuntu</li>
-        <li>CentOS</li>
-        <li>Red Hat</li>
-        <li>Windows Server</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Scripting & Automation</h3>
-      <ul>
-        <li>Python</li>
-        <li>Bash</li>
-        <li>SQL</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Identity Management</h3>
-      <ul>
-        <li>Active Directory</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Data Formats</h3>
-      <ul>
-        <li>JSON</li>
-        <li>YAML</li>
-      </ul>
-    </div>
-  </div>
+  <ul>
+    <li><strong>Security Monitoring:</strong> Splunk, Google Chronicle, Wireshark, tcpdump, Nmap</li>
+    <li><strong>Malware & Threat Intel:</strong> VirusTotal, Cuckoo Sandbox</li>
+    <li><strong>Operating Systems:</strong> Kali Linux, Ubuntu, CentOS, Red Hat, Windows Server</li>
+    <li><strong>Scripting & Automation:</strong> Python, Bash, SQL</li>
+    <li><strong>Identity Management:</strong> Active Directory</li>
+    <li><strong>Data Formats:</strong> JSON, YAML</li>
+  </ul>
+</section>
+
+<!-- Projects -->
+<section id="projects" class="animate__animated animate__fadeInUp">
+  <h2 class="major">Projects</h2>
+  <ul>
+    <li><a href="https://github.com/AhmMashhour/Python-AccessList-Manager" target="_blank">Python AccessList Manager</a> – Automates access list management using Python.</li>
+    <li><a href="https://github.com/AhmMashhour/talking-gloves-for-the-deaf-and-dumb" target="_blank">Talking Gloves for the Deaf and Dumb</a> – Translating sign language into speech using Arduino and Python.</li>
+    <li><a href="https://github.com/AhmMashhour/Cybersecurity-Traffic-Analysis-and-Policy-Enforcement" target="_blank">Cybersecurity Traffic Analysis and Policy Enforcement</a> – Network traffic analysis with policy enforcement using Wireshark and Splunk.</li>
+    <li><a href="https://github.com/AhmMashhour?tab=repositories" target="_blank">All GitHub Repositories</a> – Explore all my contributions.</li>
+  </ul>
 </section>
 
 <!-- Certifications -->
 <section id="certifications" class="animate__animated animate__fadeInUp">
   <h2 class="major">Certifications</h2>
   <ul>
-    <li>Google Cybersecurity Specialization</li>
-    <li>Cyber Security – Technology and Governance (University of London)</li>
-    <li>Splunk Search Expert Specialization</li>
-    <li>Certified Ethical Hacking (v12)</li>
-    <li>Security Operations Center (SOC)</li>
-    <li>Leading People and Teams (University of Michigan)</li>
+    <li><a href="https://coursera.org/share/bfc7c66d4fbe1f836f6c10b11e918096" target="_blank">Google Cybersecurity Specialization</a></li>
+    <li><a href="https://coursera.org/share/dfc48eabc7b3f06cd894d155aa2bbbf9" target="_blank">Cyber Security: Technology and Governance</a></li>
+    <li><a href="https://coursera.org/share/81c6ff7593abaf21fe17eede37dc1734" target="_blank">Splunk Search Expert Specialization</a></li>
+    <li><a href="https://coursera.org/share/3123da35b55d02cd14ba9ca332e75ba6" target="_blank">Certified Ethical Hacking (v12)</a></li>
+    <li><a href="https://coursera.org/share/b5f14ae9e84e7d1105a0685783d798e0" target="_blank">Security Operations Center (SOC)</a></li>
+    <li><a href="https://coursera.org/share/de111c82b3afd2231c7f0fd14c60dfc4" target="_blank">Leading People and Teams</a></li>
   </ul>
-</section>
-
-<!-- Projects -->
-<section id="projects" class="animate__animated animate__fadeInUp">
-  <h2 class="major">Featured Projects</h2>
-  <p>Explore practical cybersecurity labs, automation tools, and real-world analysis projects on my GitHub profile.</p>
-  <p><a href="https://github.com/ahmmashhour?tab=repositories" class="button primary">View Repositories</a></p>
 </section>
 
 <!-- Contact -->
 <section id="contact" class="animate__animated animate__fadeInUp">
   <h2 class="major">Contact</h2>
-  <ul class="icons">
-    <li><a href="mailto:ahm.mashhour@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-    <li><a href="https://linkedin.com/in/ahmed-mashhour-b074ba178" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-    <li><a href="https://www.instagram.com/cyber.anda" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-    <li><a href="https://youtube.com/@cyberanda" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+  <ul>
+    <li>Email: <a href="mailto:ahm.mashhour@gmail.com">ahm.mashhour@gmail.com</a></li>
+    <li>LinkedIn: <a href="https://linkedin.com/in/ahmed-mashhour-b074ba178" target="_blank">Ahmed Mashhour LinkedIn</a></li>
+    <li>GitHub: <a href="https://github.com/AhmMashhour" target="_blank">Ahmed Mashhour GitHub</a></li>
+    <li>Instagram: <a href="https://www.instagram.com/cyber.anda" target="_blank">@cyber.anda</a></li>
+    <li>YouTube: <a href="https://youtube.com/@cyberanda" target="_blank">@cyberanda</a></li>
   </ul>
 </section>
-
-<!-- Scroll to Top Button -->
-<button onclick="topFunction()" id="scrollTopBtn" title="Go to top">↑</button>
-
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-<script>
-  // Show scroll to top button
-  window.onscroll = function() {
-    let btn = document.getElementById("scrollTopBtn");
-    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
-      btn.style.display = "block";
-    } else {
-      btn.style.display = "none";
-    }
-  };
-  function topFunction() {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }
-</script>
 
 </body>
 </html>
