--- a/index.html
+++ b/index.html
@@ -169,14 +169,45 @@
 <!-- Contact Section -->
 <section id="contact">
   <h2 class="major">Contact</h2>
-  <ul>
-    <li>Email: <a href="mailto:ahm.mashhour@gmail.com">ahm.mashhour@gmail.com</a></li>
-    <li>LinkedIn: <a href="https://linkedin.com/in/ahmed-mashhour-b074ba178" target="_blank">Ahmed Mashhour LinkedIn</a></li>
-    <li>GitHub: <a href="https://github.com/AhmMashhour" target="_blank">Ahmed Mashhour GitHub</a></li>
-    <li>Instagram: <a href="https://www.instagram.com/cyber.anda" target="_blank">@cyber.anda</a></li>
-    <li>YouTube: <a href="https://youtube.com/@cyberanda" target="_blank">@cyberanda</a></li>
-  </ul>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
+    <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; display: flex; align-items: center; gap: 15px;">
+      <i class="fas fa-envelope" style="font-size: 24px; color: #4AB197;"></i>
+      <div>
+        <strong>Email</strong><br>
+        <a href="mailto:ahm.mashhour@gmail.com" style="color: #4AB197; text-decoration: none;">ahm.mashhour@gmail.com</a>
+      </div>
+    </div>
+    <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; display: flex; align-items: center; gap: 15px;">
+      <i class="fab fa-linkedin" style="font-size: 24px; color: #0A66C2;"></i>
+      <div>
+        <strong>LinkedIn</strong><br>
+        <a href="https://linkedin.com/in/ahmed-mashhour-b074ba178" target="_blank" style="color: #4AB197; text-decoration: none;">Ahmed Mashhour</a>
+      </div>
+    </div>
+    <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; display: flex; align-items: center; gap: 15px;">
+      <i class="fab fa-github" style="font-size: 24px; color: white;"></i>
+      <div>
+        <strong>GitHub</strong><br>
+        <a href="https://github.com/AhmMashhour" target="_blank" style="color: #4AB197; text-decoration: none;">AhmMashhour</a>
+      </div>
+    </div>
+    <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; display: flex; align-items: center; gap: 15px;">
+      <i class="fab fa-instagram" style="font-size: 24px; color: #E1306C;"></i>
+      <div>
+        <strong>Instagram</strong><br>
+        <a href="https://www.instagram.com/cyber.anda" target="_blank" style="color: #4AB197; text-decoration: none;">@cyber.anda</a>
+      </div>
+    </div>
+    <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; display: flex; align-items: center; gap: 15px;">
+      <i class="fab fa-youtube" style="font-size: 24px; color: #FF0000;"></i>
+      <div>
+        <strong>YouTube</strong><br>
+        <a href="https://youtube.com/@cyberanda" target="_blank" style="color: #4AB197; text-decoration: none;">@cyberanda</a>
+      </div>
+    </div>
+  </div>
 </section>
+
 
 </body>
 </html>
