--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
   <h2 class="major" style="text-align: center; color: #f1f5f9; font-size: 36px; margin-bottom: 40px;">My Favorite Tools</h2>
 
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 25px;">
-    <!-- Tool Card -->
     <div style="background: rgba(255,255,255,0.05); border: 1px solid rgba(255,255,255,0.08); border-radius: 12px; padding: 25px; text-align: center; box-shadow: 0 0 20px rgba(16,185,129,0.1); transition: transform 0.3s ease;">
       <i class="fas fa-search" style="font-size: 32px; color: #67e8f9;"></i>
       <h4 style="margin-top: 15px; color: #f1f5f9;">Wireshark</h4>
@@ -156,68 +155,76 @@
   </div>
 </section>
 
-
 <!-- Projects Section -->
-<section id="projects">
-  <h2 class="major">Featured Projects</h2>
-  <div class="projects-grid">
-    <div class="project-card">
+<section id="projects" style="padding: 80px 20px; max-width: 1200px; margin: auto;">
+  <h2 class="major" style="text-align: center; color: #f1f5f9; font-size: 36px; margin-bottom: 40px;">Featured Projects</h2>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(59,130,246,0.1);">
       <h4>Python AccessList Manager</h4>
-      <p>Automates access list management using Python for enhanced network control.</p>
-      <a href="https://github.com/AhmMashhour/Python-AccessList-Manager" target="_blank" class="button primary">View Project</a>
+      <p style="color: #94a3b8;">Automates access list management using Python for enhanced network control.</p>
+      <a href="https://github.com/AhmMashhour/Python-AccessList-Manager" target="_blank" style="display: inline-block; margin-top: 10px; color: #10b981; font-weight: bold;">View Project →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(59,130,246,0.1);">
       <h4>Talking Gloves for the Deaf and Dumb</h4>
-      <p>Gloves that translate sign language into speech in real-time using Arduino and Python.</p>
-      <a href="https://github.com/AhmMashhour/talking-gloves-for-the-deaf-and-dumb" target="_blank" class="button primary">View Project</a>
+      <p style="color: #94a3b8;">Gloves that translate sign language into speech in real-time using Arduino and Python.</p>
+      <a href="https://github.com/AhmMashhour/talking-gloves-for-the-deaf-and-dumb" target="_blank" style="display: inline-block; margin-top: 10px; color: #10b981; font-weight: bold;">View Project →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(59,130,246,0.1);">
       <h4>Cybersecurity Traffic Analysis</h4>
-      <p>Capturing and analyzing network traffic with security policy enforcement using Python, Wireshark, and Splunk.</p>
-      <a href="https://github.com/AhmMashhour/Cybersecurity-Traffic-Analysis-and-Policy-Enforcement" target="_blank" class="button primary">View Project</a>
+      <p style="color: #94a3b8;">Capturing and analyzing network traffic with security policy enforcement using Python, Wireshark, and Splunk.</p>
+      <a href="https://github.com/AhmMashhour/Cybersecurity-Traffic-Analysis-and-Policy-Enforcement" target="_blank" style="display: inline-block; margin-top: 10px; color: #10b981; font-weight: bold;">View Project →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(59,130,246,0.1);">
       <h4>All GitHub Repositories</h4>
-      <p>Explore all my projects, tools, and contributions in one place.</p>
-      <a href="https://github.com/AhmMashhour?tab=repositories" target="_blank" class="button primary">View All Repositories</a>
+      <p style="color: #94a3b8;">Explore all my projects, tools, and contributions in one place.</p>
+      <a href="https://github.com/AhmMashhour?tab=repositories" target="_blank" style="display: inline-block; margin-top: 10px; color: #10b981; font-weight: bold;">View All →</a>
     </div>
   </div>
 </section>
 
+
 <!-- Certifications Section -->
-<section id="certifications">
-  <h2 class="major">Certifications</h2>
-  <div class="projects-grid">
-    <div class="project-card">
+<section id="certifications" style="padding: 80px 20px; max-width: 1200px; margin: auto;">
+  <h2 class="major" style="text-align: center; color: #f1f5f9; font-size: 36px; margin-bottom: 40px;">Certifications</h2>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(245,158,11,0.1);">
       <h4>Google Cybersecurity Specialization</h4>
-      <a href="https://coursera.org/share/bfc7c66d4fbe1f836f6c10b11e918096" target="_blank" class="button primary">View Certificate</a>
+      <a href="https://coursera.org/share/bfc7c66d4fbe1f836f6c10b11e918096" target="_blank" style="display: inline-block; margin-top: 10px; color: #facc15; font-weight: bold;">View Certificate →</a>
     </div>
-    <div class="project-card">
-      <h4>Cyber Security: Technology and Governance</h>
-      <a href="https://coursera.org/share/dfc48eabc7b3f06cd894d155aa2bbbf9" target="_blank" class="button primary">View Certificate</a>
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(245,158,11,0.1);">
+      <h4>Cyber Security: Technology and Governance</h4>
+      <a href="https://coursera.org/share/dfc48eabc7b3f06cd894d155aa2bbbf9" target="_blank" style="display: inline-block; margin-top: 10px; color: #facc15; font-weight: bold;">View Certificate →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(245,158,11,0.1);">
       <h4>Splunk Search Expert Specialization</h4>
-      <a href="https://coursera.org/share/81c6ff7593abaf21fe17eede37dc1734" target="_blank" class="button primary">View Certificate</a>
+      <a href="https://coursera.org/share/81c6ff7593abaf21fe17eede37dc1734" target="_blank" style="display: inline-block; margin-top: 10px; color: #facc15; font-weight: bold;">View Certificate →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(245,158,11,0.1);">
       <h4>Certified Ethical Hacking (v12)</h4>
-      <a href="https://coursera.org/share/3123da35b55d02cd14ba9ca332e75ba6" target="_blank" class="button primary">View Certificate</a>
+      <a href="https://coursera.org/share/3123da35b55d02cd14ba9ca332e75ba6" target="_blank" style="display: inline-block; margin-top: 10px; color: #facc15; font-weight: bold;">View Certificate →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(245,158,11,0.1);">
       <h4>Security Operations Center (SOC)</h4>
-      <a href="https://coursera.org/share/b5f14ae9e84e7d1105a0685783d798e0" target="_blank" class="button primary">View Certificate</a>
+      <a href="https://coursera.org/share/b5f14ae9e84e7d1105a0685783d798e0" target="_blank" style="display: inline-block; margin-top: 10px; color: #facc15; font-weight: bold;">View Certificate →</a>
     </div>
-    <div class="project-card">
+
+    <div style="background: rgba(255,255,255,0.04); border-radius: 12px; padding: 20px; color: #f1f5f9; box-shadow: 0 0 20px rgba(245,158,11,0.1);">
       <h4>Leading People and Teams Specialization</h4>
-      <a href="https://coursera.org/share/de111c82b3afd2231c7f0fd14c60dfc4" target="_blank" class="button primary">View Certificate</a>
+      <a href="https://coursera.org/share/de111c82b3afd2231c7f0fd14c60dfc4" target="_blank" style="display: inline-block; margin-top: 10px; color: #facc15; font-weight: bold;">View Certificate →</a>
     </div>
   </div>
 </section>
 
 <!-- Contact Section -->
-<section id="contact">
-  <h2 class="major">Contact</h2>
+<section id="contact" style="padding: 80px 20px; max-width: 1000px; margin: auto;">
+  <h2 class="major" style="text-align: center; color: #f1f5f9; font-size: 36px; margin-bottom: 40px;">Contact</h2>
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
     <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 10px; display: flex; align-items: center; gap: 15px;">
       <i class="fas fa-envelope" style="font-size: 24px; color: #4AB197;"></i>
@@ -256,7 +263,3 @@
     </div>
   </div>
 </section>
-
-
-</body>
-</html>
