--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<body style="margin: 0; background-color: #0f172a; font-family: 'Poppins', sans-serif;">
+
 <!-- Hero Section (Home Page) -->
 <section id="home" style="height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: linear-gradient(-45deg, #111827, #1f2937, #0f172a); background-size: 400% 400%; animation: gradientBG 18s ease infinite; padding: 0 20px; position: relative; overflow: hidden;">
   <style>
@@ -99,6 +101,9 @@
     type();
   </script>
 </section>
+
+<!-- باقي الأقسام ستظل داكنة ومرئية بوضوح ضمن نفس الخلفية -->
+
 
 <!-- Tools Section -->
 <section id="tools" style="padding: 80px 20px; max-width: 1200px; margin: auto;">
